--- a/blog/src/index.pug
+++ b/blog/src/index.pug
@@ -19,7 +19,7 @@ html(lang="en")
             header(class="header-1")
                 nav(class="navbar navbar-expand-lg bg-default navbar-absolute")
                     div(class="container")
-                        a(class="navbar-brand text-white", href="javascript:;") Argon 
+                        a(class="navbar-brand text-white", href="javascript:;") Argon Testing 
                         button(class="navbar-toggler", type="button", data-toggle="collapse", data-target="#navbar-header-1", aria-controls="navbar-header-1", aria-expanded="false", aria-label="Toggle navigation")
                             span(class="navbar-toggler-icon")
                         div(class="collapse navbar-collapse", id="navbar-header-1")
